--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   "module": "dist/reveal.esm.js",
   "license": "MIT",
   "scripts": {
-    "test": "mdspell -r -n -a --en-us 'src/*.md' 'src/**/*.md'",
-    "start": "NODE_ENV=development yarn eleventy --config=eleventy.config.js --serve & gulp",
-    "dev": "yarn start",
-    "production": "NODE_ENV=production gulp build && NODE_ENV=production yarn eleventy --config=eleventy.config.js"
+    "test": "gulp test",
+    "start": "gulp serve",
+    "build": "gulp"
   },
   "author": {
     "name": "Hakim El Hattab",
@@ -31,35 +30,32 @@
     "presentation"
   ],
   "devDependencies": {
-    "@babel/core": "^7.28.5",
-    "@babel/preset-env": "^7.28.5",
-    "@rollup/plugin-babel": "^6.1.0",
-    "@rollup/plugin-commonjs": "^28.0.9",
-    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "@rollup/plugin-babel": "^5.0.2",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-plugin-transform-html-import-to-string": "2.0.0",
+    "babel-plugin-transform-html-import-to-string": "0.0.1",
     "colors": "^1.4.0",
-    "core-js": "^3.46.0",
-    "glob": "^11.0.3",
+    "core-js": "^3.6.5",
+    "glob": "^7.1.6",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^10.0.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-connect": "^5.0.0",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-connect": "^5.7.0",
     "gulp-eslint": "^6.0.0",
-    "gulp-header": "^1.8.9",
-    "gulp-postcss": "^9.0.1",
-    "gulp-rename": "^2.0.0",
+    "gulp-header": "^2.0.9",
+    "gulp-sass": "^4.0.2",
     "gulp-tap": "^2.0.0",
-    "gulp-zip": "^6.1.0",
-    "highlight.js": "^11.11.1",
-    "marked": "^16.4.1",
-    "node-qunit-puppeteer": "^2.2.1",
-    "qunit": "^2.24.2",
-    "rollup": "^2.79.2",
-    "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.69.4",
-    "webpack-stream": "^7.0.0",
-    "yargs": "^18.0.0"
+    "gulp-zip": "^5.0.1",
+    "highlight.js": "^10.0.3",
+    "marked": "^1.1.0",
+    "node-qunit-puppeteer": "^2.0.1",
+    "qunit": "^2.10.0",
+    "rollup": "^2.10.9",
+    "rollup-plugin-terser": "^5.3.0",
+    "yargs": "^15.1.0"
   },
   "browserslist": "> 0.5%, IE 11, not dead",
   "eslintConfig": {
